Fix intro bg image when default dark mode

--- a/assets/scss/dw/_theme-switch.scss
+++ b/assets/scss/dw/_theme-switch.scss
@@ -42,6 +42,8 @@
       --primary-color-o20: var(--dark-primary-color-o20);
       --secondary-color-o20: var(--dark-secondary-color-o20);
 
+      --introduction-bg: var(--dark-introduction-bg);
+
       img {
         filter: brightness(.8) contrast(1.2);
       }
